--- a/1-programacion-uno/reto4/retoCuatroProgramacionUno.html
+++ b/1-programacion-uno/reto4/retoCuatroProgramacionUno.html
@@ -16,7 +16,7 @@
     <h1>La Geek Girl seleccionada es: </h1>
 
 
-    <script type="text/javascript" src="retoTresProgramacionUno.js">
+    <script type="text/javascript" src="retoCuatroProgramacionUno.js">
         // adicionar archivo Js externo
     </script>
 </body>
