--- a/1-programacion-uno/reto6/retoSeisProgramacionUno.html
+++ b/1-programacion-uno/reto6/retoSeisProgramacionUno.html
@@ -8,12 +8,16 @@
 </head>
 
 <body>
-    <h1></h1>
+
+    <div class="text"></div>
 
 
-    <script type="text/javascript" src="retoTresProgramacionUno.js">
+
+    <script type="text/javascript" src="retoseisProgramacionUno.js">
         // adicionar archivo Js externo
     </script>
 </body>
+
+</html>
 
 </html>
