--- a/1-programacion-uno/reto7/retoSieteProgramacionUno.html
+++ b/1-programacion-uno/reto7/retoSieteProgramacionUno.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
-    <h1></h1>
+
+    <ul class="list"> </ul>
 
 
-    <script type="text/javascript" src="retoTresProgramacionUno.js">
+    <script type="text/javascript" src="retoSieteProgramacionUno.js">
         // adicionar archivo Js externo
     </script>
 </body>
