--- a/1-programacion-uno/reto5/retoCincoProgramacionUno.html
+++ b/1-programacion-uno/reto5/retoCincoProgramacionUno.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mi primer código JavaScript</title>
+    <title>RETO 5</title>
 </head>
 
 <body>
-    <h1></h1>
+    <h1>Mi contraseña es:
+    </h1>
+    <h2>Geek2020</h2>
 
 
-    <script type="text/javascript" src="retoTresProgramacionUno.js">
+
+    <script type="text/javascript" src="retoCincoProgramacionUno.js">
         // adicionar archivo Js externo
     </script>
 </body>
