--- a/1-programacion-uno/reto8/retoOchoProgramacionUno.html
+++ b/1-programacion-uno/reto8/retoOchoProgramacionUno.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mi primer código JavaScript</title>
+    <link rel="stylesheet" href="retoOchoProgramacionUno.css">
+    <title>RETO 8</title>
 </head>
 
 <body>
-    <h1></h1>
+    <button class="btn1">Boton 1</button>
+
+    <button class="btn2">Boton 2</button>
 
 
-    <script type="text/javascript" src="retoTresProgramacionUno.js">
+    <script type="text/javascript" src="retoOchoProgramacionUno.js">
         // adicionar archivo Js externo
     </script>
 </body>
