--- a/2-programacion-dos/reto2/retoDosProgramacionDos.html
+++ b/2-programacion-dos/reto2/retoDosProgramacionDos.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mi primer código JavaScript</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="retoDosProgramacionDos.css">
+    <title>Isra is Cool</title>
 </head>
 
 <body>
-    <h1></h1>
+    <main class="main">
+        <h1 class="main__title">Ese Isra como mola, se merece una <span class="super-wave">OLA!</span></h1>
+    </main>
 
 
-    <script type="text/javascript" src="retoDosProgramacionUno.js">
+    <script type="text/javascript" src="retoDosProgramacionDos.js">
         // adicionar archivo Js externo
     </script>
 </body>
