--- a/2-programacion-dos/reto8/retoOchoProgramacionDos.html
+++ b/2-programacion-dos/reto8/retoOchoProgramacionDos.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <h1></h1>
+    <ul class="list"></ul>>
 
 
-    <script type="text/javascript" src="retoTresProgramacionUno.js">
+    <script type="text/javascript" src="retoOchoProgramacionDos.js">
         // adicionar archivo Js externo
     </script>
 </body>
