--- a/2-programacion-dos/reto10/retoDiezProgramacionDos.html
+++ b/2-programacion-dos/reto10/retoDiezProgramacionDos.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mi primer código JavaScript</title>
+    <title>RETO 10</title>
 </head>
 
 <body>
-    <h1></h1>
+    <h1 class="list">60</h1>
 
 
-    <script type="text/javascript" src="retoTresProgramacionUno.js">
+    <script type="text/javascript" src="retoDiezProgramacionDos.js">
         // adicionar archivo Js externo
     </script>
 </body>
