--- a/3-condicionales/reto5/retoCincoCondicionales.html
+++ b/3-condicionales/reto5/retoCincoCondicionales.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mi primer código JavaScript</title>
+    <link rel="stylesheet" href="retoUnoCondicionales.css">
+    <title>RETO 1</title>
 </head>
 
 <body>
-    <h1></h1>
 
-
-    <script type="text/javascript" src="retoTresProgramacionUno.js">
+    <div class="error">
+        <title>NOTIFICACION</title>
+        <p>Mensaje por defecto</p>
+    </div>
+    <script type="text/javascript" src="retoUnoCondicionales.js">
         // adicionar archivo Js externo
     </script>
 </body>
