--- a/3-condicionales/reto1/retoUnoCondicionales.html
+++ b/3-condicionales/reto1/retoUnoCondicionales.html
@@ -4,14 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mi primer código JavaScript</title>
+    <link rel="stylesheet" href="retoUnoCondicionales.css">
+    <title>RETO 1</title>
 </head>
 
 <body>
-    <h1></h1>
 
+    <title>PuroHueso94</title>
 
-    <script type="text/javascript" src="retoUnoProgramacionUno.js">
+    <div class="container list">
+
+    </div>
+    <script type="text/javascript" src="retoUnoCondicionales.js">
         // adicionar archivo Js externo
     </script>
 </body>
